--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="Ron Huang" />
 
-	<title>Yet another homepage for Ron Huang.</title>
+	<title>ronhuang@github</title>
   </head>
 
   <body>
-    <div>Yet another homepage for Ron Huang.</div>
+    <div>ronhuang@github</div>
   </body>
 </html>
